k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: endih.azurecr.io/nginx
        resources:
          requests:
            memory: "200Mi"
            cpu: "500m"
          limits:
            memory: "250Mi"
            cpu: "750m"
        ports:
        - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
        livenessProbe:
          tcpSocket:
            port: 80
        startupProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10 
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
