k8s/springboot-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: springboot-deployment
  labels:
    app: springboot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
      - name: springboot-container
        image: endih.azurecr.io/auction-backend
        resources:
          requests:
            memory: "300Mi"
            cpu: "500m"
          limits:
            memory: "450Mi"
            cpu: "700m"
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
        startupProbe:
          tcpSocket:
            port: 8080
                
          initialDelaySeconds: 25
          periodSeconds: 30
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  selector:
    app: springboot
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080 
  type: ClusterIP
