k8s/auction-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auction-ingress
  namespace: auctionspace
  annotations:
      kubernetes.io/ingress.class: nginx
         
spec:      
  rules:
    - host: auction.racun.ninja      
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
