k8s/backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: auctionspace
  annotations:
      kubernetes.io/ingress.class: nginx

spec:
  rules:
    - host: auction-backend.racun.ninja
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-service
                port:
                  number: 8080
